--- a/01/A_Module/index.html
+++ b/01/A_Module/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../공통/fontawesome/css/font-awesome.css">
-    <link rel="stylesheet" href="../../공통/bootstrap-4.5.0-dist/bootstrap-4.5.0-dist/css/bootstrap.css">
+    <link rel="stylesheet" href="../../공통/bootstrap-5.0.1-dist/css/bootstrap.css">
     <link rel="stylesheet" href="./css/style.css">
     <title>대전 브레드 투어</title>
 </head>
@@ -106,7 +106,7 @@
                 <h4 class="text-center mb-4">새소식</h4>
                 <div class="news-box">
                     <ul class="tab-menu">
-                        <li id="tab1" class="w-50 float-left text-center">
+                        <li id="tab1" class="w-50 text-center">
                             <input type="radio" name="tab-menu" id="tab-menu1" checked hidden>
                             <label for="tab-menu1" class="w-100 mb-0 d-block">공지사항</label>
                             <div class="tab-con w-100 text-left position-absolute">
@@ -132,7 +132,7 @@
                                 </div>
                             </div>
                         </li>
-                        <li id="tab2" class="w-50 float-left text-center">
+                        <li id="tab2" class="w-50 text-center">
                             <input type="radio" name="tab-menu" id="tab-menu2" hidden>
                             <label for="tab-menu2" class="w-100 mb-0 d-block">소통과 참여</label>
                             <div class="tab-con w-100 text-left position-absolute">
