--- a/01/A_Module/sub.html
+++ b/01/A_Module/sub.html
@@ -33,7 +33,7 @@
             </label>
         </header>
 
-        <section id="sub-main-section">
+        <section id="sub-main-section" class="mb-5">
             <div class="search">
                 <div class="input-group">
                     <select class="form-select" id="search-bread">
@@ -43,6 +43,128 @@
                     </select>
                     <input type="text" class="form-control">
                     <button class="btn btn-outline-brown">검색</button>
+                </div>
+            </div>
+            <div class="store-list">
+                <div>
+                    <h3 class="text-center mt-5 mb-4">베스트 빵집</h3>
+                    <div class="bread-store-list mb-5">
+                        <div class="card">
+                            <img src="../../A 모듈/빵집베스트/1.jpg" class="card-img-top" alt="img" title="img">
+                            <div class="card-body">
+                                <h5 class="card-title">꾸드뱅</h5>
+                                <p class="card-text mb-1">대덕구 송촌동</p>
+                                <p class="card-text mb-1"><i class="fa fa-phone me-2"></i>042-825-3033</p>
+                                <p class="card-text mb-1">평점 : 4.7점</p>
+                                <p class="card-text">리뷰 : 3개</p>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <img src="../../A 모듈/빵집베스트/2.jpg" class="card-img-top" alt="img" title="img">
+                            <div class="card-body">
+                                <h5 class="card-title">하레하레</h5>
+                                <p class="card-text mb-1">동구 가양2동</p>
+                                <p class="card-text mb-1"><i class="fa fa-phone me-2"></i>042-483-1595</p>
+                                <p class="card-text mb-1">평점 : 3.7점</p>
+                                <p class="card-text">리뷰 : 2개</p>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <img src="../../A 모듈/빵집베스트/3.jpg" class="card-img-top" alt="img" title="img">
+                            <div class="card-body">
+                                <h5 class="card-title">사월제과</h5>
+                                <p class="card-text mb-1">동구 성남동</p>
+                                <p class="card-text mb-1"><i class="fa fa-phone me-2"></i>010-8376-9403</p>
+                                <p class="card-text mb-1">평점 : 4.0점</p>
+                                <p class="card-text">리뷰 : 1개</p>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <img src="../../A 모듈/빵집베스트/4.jpg" class="card-img-top" alt="img" title="img">
+                            <div class="card-body">
+                                <h5 class="card-title">TEMS</h5>
+                                <p class="card-text mb-1">중구 태평2동</p>
+                                <p class="card-text mb-1"><i class="fa fa-phone me-2"></i>042-535-8604</p>
+                                <p class="card-text mb-1">평점 : 3.8점</p>
+                                <p class="card-text">리뷰 : 2개</p>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <img src="../../A 모듈/빵집베스트/5.jpg" class="card-img-top" alt="img" title="img">
+                            <div class="card-body">
+                                <h5 class="card-title">베이크오프</h5>
+                                <p class="card-text mb-1">중구 목동</p>
+                                <p class="card-text mb-1"><i class="fa fa-phone me-2"></i>042-472-1248</p>
+                                <p class="card-text mb-1">평점 : 3.3점</p>
+                                <p class="card-text">리뷰 : 1개</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <h3 class="text-center mt-5 mb-4">빵집 리스트</h3>
+                    <div class="bread-store-list">
+                        <div class="card">
+                            <img src="../../A 모듈/빵집리스트/1.jpg" class="card-img-top" alt="img" title="img">
+                            <div class="card-body">
+                                <h5 class="card-title">콜마르브레드</h5>
+                                <p class="card-text mb-1">중구 오류동</p>
+                                <p class="card-text mb-1"><i class="fa fa-phone me-2"></i>042-863-0206</p>
+                                <p class="card-text mb-1">평점 : 1.5점</p>
+                                <p class="card-text">리뷰 : 3개</p>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <img src="../../A 모듈/빵집리스트/2.jpg" class="card-img-top" alt="img" title="img">
+                            <div class="card-body">
+                                <h5 class="card-title">테라스키친</h5>
+                                <p class="card-text mb-1">유성구 관평동</p>
+                                <p class="card-text mb-1"><i class="fa fa-phone me-2"></i>042-861-7001</p>
+                                <p class="card-text mb-1">평점 : 2.0점</p>
+                                <p class="card-text">리뷰 : 1개</p>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <img src="../../A 모듈/빵집리스트/3.jpg" class="card-img-top" alt="img" title="img">
+                            <div class="card-body">
+                                <h5 class="card-title">바이러브하니</h5>
+                                <p class="card-text mb-1">서구 도마1동</p>
+                                <p class="card-text mb-1"><i class="fa fa-phone me-2"></i>042-223-8004</p>
+                                <p class="card-text mb-1">평점 : 2.7점</p>
+                                <p class="card-text">리뷰 : 3개</p>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <img src="../../A 모듈/빵집리스트/4.jpg" class="card-img-top" alt="img" title="img">
+                            <div class="card-body">
+                                <h5 class="card-title">메이드비</h5>
+                                <p class="card-text mb-1">동구 삼성동</p>
+                                <p class="card-text mb-1"><i class="fa fa-phone me-2"></i>042-472-9985</p>
+                                <p class="card-text mb-1">평점 : 4.0점</p>
+                                <p class="card-text">리뷰 : 1개</p>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <img src="../../A 모듈/빵집리스트/5.jpg" class="card-img-top" alt="img" title="img">
+                            <div class="card-body">
+                                <h5 class="card-title">성심당</h5>
+                                <p class="card-text mb-1">대덕구 목상동</p>
+                                <p class="card-text mb-1"><i class="fa fa-phone me-2"></i>1588-8069</p>
+                                <p class="card-text mb-1">평점 : 3.3점</p>
+                                <p class="card-text">리뷰 : 3개</p>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <img src="../../A 모듈/빵집리스트/6.jpg" class="card-img-top" alt="img" title="img">
+                            <div class="card-body">
+                                <h5 class="card-title">봉명가든</h5>
+                                <p class="card-text mb-1">서구 가장동</p>
+                                <p class="card-text mb-1"><i class="fa fa-phone me-2"></i>042-384-7700</p>
+                                <p class="card-text mb-1">평점 : 3.3점</p>
+                                <p class="card-text">리뷰 : 0개</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
