--- a/01/B_Module/index.html
+++ b/01/B_Module/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="/공통/fontawesome/css/font-awesome.css">
     <link rel="stylesheet" href="/공통/bootstrap-5.0.1-dist/css/bootstrap.css">
     <link rel="stylesheet" href="/css/style.css">
+    <script src="/js/jquery-3.6.0.min.js"></script>
+    <!-- <script src="/js/map.js"></script> -->
     <title>대전 브레드 투어</title>
 </head>
 
