--- a/01/B_Module/stamp.html
+++ b/01/B_Module/stamp.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../../공통/bootstrap-5.0.1-dist/css/bootstrap.css">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/sub.css">
+    <script src="/js/jquery-3.6.0.min.js"></script>
     <script src="/js/stamp.js"></script>
     <title>스탬프</title>
 </head>
@@ -34,8 +35,29 @@
             </label>
         </header>
 
-        <section id="stamp-page">
-
+        <section id="stamp-page" class="w-100 py-5 d-flex justify-content-around">
+            <div class="left-main">
+                <div class="issue d-flex">
+                    <h3>스탬프 카드 발급</h3>
+                    <button id="issue-stamp-btn" class="btn btn-brown">발급하기</button>
+                </div>
+                <div class="code">
+                    <h3>쿠폰 코드 / 스탬프 찍기</h3>
+                    <div class="input-group">
+                        <input type="text" id="code-input" class="form-control" placeholder="코드를 입력해주세요.">
+                        <button id="code-input-btn" class="btn btn-brown">스탬프 찍기</button>
+                    </div>
+                </div>
+                <div class="event">
+                    <h3>스탬프 이벤트 참여</h3>
+                    <div class="mb-3">
+                        <input type="file" class="form-control" id="event-file">
+                    </div>
+                </div>
+            </div>
+            <div class="right-roulette">
+                <img src="/B 모듈/roulette.png" alt="roulette" title="roulette">
+            </div>
         </section>
 
         <!-- 푸터 영역 -->
@@ -60,6 +82,40 @@
                 <p class="mb-0">COPYRIGHTⓒ 2021 Daejeon Bakery Merchants Association</p>
             </div>
         </footer>
+    </div>
+
+    <div class="popup" id="stamp-popup">
+        <div class="inner p-2">
+            <div class="popup-header m-3 d-flex justify-content-between">
+                <h5 class="ps-3">스탬프 카드 발급받기</h5>
+                <div class="close-btn btn d-flex justify-content-center align-items-center">&times;</div>
+            </div>
+            <div class="row m-4">
+                <label for="stamp-name" class="col-sm-3 col-form-label">이름</label>
+                <div class="col-sm-9">
+                    <input type="text" class="form-control" id="stamp-name">
+                </div>
+            </div>
+            <div class="popup-btns float-end mx-3">
+                <button class="close-btn btn btn-secondary">취소</button>
+                <button id="stamp-download" class="btn btn-primary">다운로드</button>
+            </div>
+        </div>
+    </div>
+
+    <div class="popup" id="select-card">
+        <div class="inner">
+            <div class="popup-header m-3 d-flex justify-content-between">
+                <h5 class="ps-3">스탬프 카드 선택 모달</h5>
+                <div class="close-btn btn d-flex justify-content-center align-items-center">&times;</div>
+            </div>
+            <div class="row m-4">
+                <input type="file" class="form-control" id="stamp-file" accept="image/*">
+            </div>
+            <div class="popup-btns float-end mx-3">
+                <button class="close-btn btn btn-secondary">닫기</button>
+            </div>
+        </div>
     </div>
 </body>
 
