--- a/01/B_Module/stamp.html
+++ b/01/B_Module/stamp.html
@@ -22,7 +22,7 @@
                 <img src="./logo.png" alt="logo" title="logo" width="120">
             </div>
             <ul id="menu">
-                <li><a href="#">대전 빵집</a></li>
+                <li><a href="/sub.html">대전 빵집</a></li>
                 <li><a href="/stamp.html">스탬프</a></li>
                 <li><a href="#">할인 이벤트</a></li>
                 <li><a href="#">마이페이지</a></li>
@@ -56,6 +56,7 @@
                 </div>
             </div>
             <div class="right-roulette">
+                <div class="roulette-arrow"></div>
                 <img src="/B 모듈/roulette.png" alt="roulette" title="roulette">
             </div>
         </section>
