--- a/01/B_Module/sub.html
+++ b/01/B_Module/sub.html
@@ -20,8 +20,8 @@
                 <img src="./logo.png" alt="logo" title="logo" width="120">
             </div>
             <ul id="menu">
-                <li><a href="#">대전 빵집</a></li>
-                <li><a href="#">스탬프</a></li>
+                <li><a href="/sub.html">대전 빵집</a></li>
+                <li><a href="/stamp.html">스탬프</a></li>
                 <li><a href="#">할인 이벤트</a></li>
                 <li><a href="#">마이페이지</a></li>
             </ul>
