--- a/01/B_Module/stamp.html
+++ b/01/B_Module/stamp.html
@@ -110,8 +110,9 @@
                 <h5 class="ps-3">스탬프 카드 선택 모달</h5>
                 <div class="close-btn btn d-flex justify-content-center align-items-center">&times;</div>
             </div>
-            <div class="row m-4">
-                <input type="file" class="form-control" id="stamp-file" accept="image/*">
+            <div class="input-group m-4">
+                <button class="input-group-text" id="stamp-file">파일 선택</button>
+                <div id="stamp-file-name" class="form-control">선택된 파일 없음</div>
             </div>
             <div class="popup-btns float-end mx-3">
                 <button class="close-btn btn btn-secondary">닫기</button>
