--- a/01/B_Module/index.html
+++ b/01/B_Module/index.html
@@ -8,8 +8,9 @@
     <link rel="stylesheet" href="/공통/fontawesome/css/font-awesome.css">
     <link rel="stylesheet" href="/공통/bootstrap-5.0.1-dist/css/bootstrap.css">
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/sub.css">
     <script src="/js/jquery-3.6.0.min.js"></script>
-    <!-- <script src="/js/map.js"></script> -->
+    <script src="/js/map.js"></script>
     <title>대전 브레드 투어</title>
 </head>
 
@@ -192,7 +193,7 @@
                     <div class="bakery-information">
                         <div class="bakery-title d-flex align-items-end">
                             <h3>성심당</h3>
-                            <button class="btn btn-brown">지도보기</button>
+                            <button data-idx="0" class="btn btn-brown">지도보기</button>
                         </div>
                         <div class="bakery-title-border"></div>
                         <p class="bakery-address mb-4">대전광역시 중구 은행동 대종로480번길 15</p>
@@ -244,7 +245,7 @@
                     <div class="bakery-information">
                         <div class="bakery-title d-flex align-items-end">
                             <h3>콜마르브레드</h3>
-                            <button class="btn btn-brown">지도보기</button>
+                            <button data-idx="1" class="btn btn-brown">지도보기</button>
                         </div>
                         <div class="bakery-title-border"></div>
                         <p class="bakery-address mb-4">대전광역시 유성구 어은로 52 엘리트독서실</p>
@@ -296,7 +297,7 @@
                     <div class="bakery-information">
                         <div class="bakery-title d-flex align-items-end">
                             <h3>아빠의꿈</h3>
-                            <button class="btn btn-brown">지도보기</button>
+                            <button data-idx="2" class="btn btn-brown">지도보기</button>
                         </div>
                         <div class="bakery-title-border"></div>
                         <p class="bakery-address mb-4">대전광역시 유성구 신성남로 57</p>
@@ -347,7 +348,7 @@
                     <div class="bakery-information">
                         <div class="bakery-title d-flex align-items-end">
                             <h3>파이한모금</h3>
-                            <button class="btn btn-brown">지도보기</button>
+                            <button data-idx="3" class="btn btn-brown">지도보기</button>
                         </div>
                         <div class="bakery-title-border"></div>
                         <p class="bakery-address mb-4">대전광역시 동구 자양동 197-8</p>
@@ -398,7 +399,7 @@
                     <div class="bakery-information">
                         <div class="bakery-title d-flex align-items-end">
                             <h3>르뺑99-1</h3>
-                            <button class="btn btn-brown">지도보기</button>
+                            <button data-idx="4" class="btn btn-brown">지도보기</button>
                         </div>
                         <div class="bakery-title-border"></div>
                         <p class="bakery-address mb-4">대전광역시 유성구 온천북로33번길 22-3 101호</p>
@@ -487,6 +488,13 @@
                 <p class="mb-0">COPYRIGHTⓒ 2021 Daejeon Bakery Merchants Association</p>
             </div>
         </footer>
+    </div>
+
+    <div class="popup" id="map-popup">
+        <div class="close-btn btn btn-outline-danger d-flex justify-content-center align-items-center">&times;</div>
+        <div class="inner d-flex justify-content-center align-items-center">
+            <canvas width="800" height="800"></canvas>
+        </div>
     </div>
 </body>
 
