--- a/01/B_Module/stamp.html
+++ b/01/B_Module/stamp.html
@@ -50,8 +50,9 @@
                 </div>
                 <div class="event">
                     <h3>스탬프 이벤트 참여</h3>
-                    <div class="mb-3">
-                        <input type="file" class="form-control" id="event-file">
+                    <div class="input-group">
+                        <button class="input-group-text" id="event-file">파일 선택</button>
+                        <div id="event-file-name" class="form-control">선택된 파일 없음</div>
                     </div>
                 </div>
             </div>
